EXUI-1002 - fix alignment issue with the search form. Code tidy

--- a/src/app/containers/app/app.component.scss
+++ b/src/app/containers/app/app.component.scss
@@ -98,3 +98,7 @@ td {
 }
 
 // Find case button END
+
+.hmcts-header__navigation-link:hover {
+  color: inherit;
+}
